# g2o-practice

./: CMakeLists.txt  README.md  main.cpp
